--- a/src/sass/abstracts/_typography.scss
+++ b/src/sass/abstracts/_typography.scss
@@ -1,14 +1,12 @@
-$-ff-sans: system-ui, sans-serif;
-$-ff-serif: serif;
-
+// Font Family
+$-ff-sans: "Kumbh Sans", sans-serif;
 $font-family-base: $-ff-sans;
-$font-family-accent: $-ff-sans;
 
-
+// Font Weight
 $-fw-400: 400;
-$-fw-500: 500;
 $-fw-700: 700;
 
 $font-weight-default: $-fw-400;
-$font-weight-semi-bold: $-fw-500;
 $font-weight-bold: $-fw-700;
+
+// Font Size
