style: update the link and button in the general file

--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -9,10 +9,19 @@ body {
   line-height: $body-line-height;
 }
 
-a {
+.navigation__list li a {
   color: $link-color;
 }
 
-a:is(:hover, :focus-visible) {
+.navigation__list li a:is(:hover, :focus-visible) {
   color: $link-color-hover;
+}
+
+button {
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  background: none;
+
+  cursor: pointer;
 }
