style: add components style

--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,4 +1,7 @@
 @forward "buttons";
+@forward "cart-items";
 @forward "site-header";
 @forward "navigation";
+@forward "site-main";
+@forward "products";
 @forward "site-footer";
