--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,5 +1,6 @@
 @forward "buttons";
 @forward "cart-items";
+@forward "lightbox-modal";
 @forward "site-header";
 @forward "navigation";
 @forward "site-main";
