--- a/src/sass/components/_site-main.scss
+++ b/src/sass/components/_site-main.scss
@@ -74,3 +74,69 @@
 .lightbox {
   display: none;
 }
+
+@include mq(large) {
+  .main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+
+    padding-block-start: min(7vh, size(11));
+
+    &.container {
+      --max-width: #{rem(1090px)}; //#{$container-max-width};
+    }
+  }
+
+  .mobile-carousel {
+    display: none;
+  }
+
+  .lightbox {
+    display: block;
+
+    width: min(100%, rem(470px));
+
+    &__main-img {
+      margin-block-end: rem(28px);
+
+      & img {
+        border-radius: rem(16px);
+      }
+    }
+
+    &__img-indicators {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: size(4);
+
+      & button {
+        position: relative;
+        width: min(100%, rem(90px));
+
+        transition: opacity 200ms ease-in-out;
+
+        &:is(:hover, :focus-visible) {
+          opacity: 0.3;
+        }
+
+        & .lightbox--selected-ring-indicator {
+          position: absolute;
+          inset: 0;
+
+          width: 100%;
+          height: 100%;
+
+          border: rem(2px) solid var(--clr-orange-200);
+          border-radius: rem(10px);
+        }
+
+        & img {
+          border-radius: rem(10px);
+        }
+      }
+    }
+  }
+}
