--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -3,6 +3,7 @@
 @forward "lightbox-modal";
 @forward "site-header";
 @forward "navigation";
+@forward "mobile-navigation";
 @forward "site-main";
 @forward "products";
 @forward "site-footer";
