--- a/src/sass/components/_lightbox-modal.scss
+++ b/src/sass/components/_lightbox-modal.scss
@@ -4,15 +4,16 @@
   display: none;
 
   @include mq(large) {
+    --lightbox-full-size: 100%;
+
     position: absolute;
     inset: 0;
     z-index: 100000;
 
-    width: 100%;
-    height: 100%;
+    width: var(--lightbox-full-size);
+    height: var(--lightbox-full-size);
 
-    display: grid;
-    place-items: center;
+    @include x-grid-center;
 
     background-color: var(--clr-dark-100);
 
@@ -21,8 +22,8 @@
 }
 
 .lightbox-flex {
-  width: min(100%, rem(500px));
   position: relative;
+  width: min(100%, rem(500px));
 }
 
 .lightbox-modal {
@@ -41,36 +42,7 @@
 
     width: 110%;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    & .lightbox-modal--btn {
-      width: rem(50px);
-      height: rem(50px);
-
-      display: grid;
-      place-items: center;
-
-      border-radius: $full-radius;
-      background-color: var(--clr-light-100);
-
-      & svg path {
-        transition: stroke 200ms ease-in-out;
-      }
-
-      &:is(:hover, :focus-visible) svg path {
-        stroke: var(--clr-orange-200);
-      }
-
-      &:nth-child(1) svg {
-        margin-inline-end: rem(3.5px);
-      }
-
-      &:nth-child(2) svg {
-        margin-inline-start: rem(3.5px);
-      }
-    }
+    @include x-flex-between;
   }
 }
 
@@ -81,21 +53,17 @@
 
   padding: rem(20px);
 
-  &:hover svg path {
+  &:is(:hover, :focus-visible) svg path {
     fill: var(--clr-orange-200);
   }
 
   & svg path {
     fill: var(--clr-light-100);
   }
-
-  margin-inline: auto;
 }
 
 .lightbox-modal--indicators {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include x-flex-between;
   gap: size(4);
 
   padding-inline: rem(30px);
@@ -111,8 +79,8 @@
     & .lightbox--selected-ring-indicator {
       position: absolute;
       inset: 0;
-      width: 100%;
-      height: 100%;
+      width: var(--lightbox-full-size);
+      height: var(--lightbox-full-size);
 
       border-radius: rem(12px);
       border: rem(2px) solid var(--clr-orange-200);
