--- a/src/sass/components/_cart-items.scss
+++ b/src/sass/components/_cart-items.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/" as *;
 
 .cart {
-  --cart-background-shadow: hsla(0, 3%, 28%, 0.3);
+  --cart-background-shadow: $cart-bg-shadow-clr;
   --cart-top: #{rem(70px)};
   --cart-left: 50%;
 
