--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/" as *;
 
 body {
-  font-family: $body-font-family;
+  font-family: "Kumbh Sans", sans-serif;
   font-weight: $body-font-weight;
   font-size: $body-font-size;
   color: $body-text-color;
