fix: fix the font name

--- a/src/sass/base/_font-face.scss
+++ b/src/sass/base/_font-face.scss
@@ -13,7 +13,7 @@
 }
 
 @font-face {
-  font-family: "Kumbh Sans";
+  font-family: "Kumbh Sans Bold";
   font-style: normal;
   font-display: swap;
   font-weight: 700;
